fix on mobile

--- a/client/src/components/ItemList/ItemList.scss
+++ b/client/src/components/ItemList/ItemList.scss
@@ -21,6 +21,7 @@
                 margin-bottom: 8px;             
             }
             .line-2 {
+                padding-right: 90px;
                 position: relative;
             }
 
@@ -82,7 +83,7 @@
                 margin-right: 10px;
             }
             @media only screen 
-            and (max-device-width: 420px) {
+            and (max-device-width: 480px) {
                 .line-1 {
                     margin-bottom: 3px;
                 }
